--- a/classes/carmel/index.html
+++ b/classes/carmel/index.html
@@ -42,9 +42,9 @@
             He shares Alex's belief in the importance of maintaining the traditional style handed 
             down through four generations of the Dong (Tung) family.</p>
         </div>
-        <p>Location: Del Mesa Carmel, 500 Del Mesa Carmel, Carmel, CA 93923<br\>
-          Beginning/Intermediate Tai Chi Wednesday 9:00-10:30am <br\>
-          Phone: 831-626-4361 <br\>
+        <p>Location: Del Mesa Carmel, 500 Del Mesa Carmel, Carmel, CA 93923<br/>
+          Beginning/Intermediate Tai Chi Wednesday 9:00-10:30am <br/>
+          Phone: 831-626-4361 <br/>
           Email (preferred): <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
     </div>
     
