--- a/classes/lakechelan/index.html
+++ b/classes/lakechelan/index.html
@@ -30,16 +30,8 @@
     <h1>Lake Chelan, Washington</h1>
   </div>
 
-  <section class="history-classes">
-    <div class="history-container classes-container">
-      <h1>Instructor: Tammy Lee Hauge</h1>
-      <p><strong>Location:</strong> Bamboo
-      <br>2129 W Prospect
-      <br>Lake Chelan Washington 98816</p>
-      <p>Phone: 509-682-3168 or Email: <a href="mailto:bamboo@nwi.net">bamboo@nwi.net</a></p>
-    </div>
-  </section>
-
+  <p>Classes no longer take place at this location</p>
+  
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
