--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -91,12 +91,12 @@
           <a href="mailto:TaiChi.Magog@gmail.com" target="_blank">TaiChi.Magog@gmail.com</a></p>
         </div>
 
-    <p>Mondays and Wednesdays 18:00 - 19:00</br>
-      <a href="http://www.ccchl.ca/"  target="_blank"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
-      7644, rue &Eacute;douard, LaSalle,  Canada, H8P 1T3</br>
-      Tel: 514.367.5000 </br>
-      Fax: 514.367.4471</br>
-      Classes start Monday September 28th 2015.</p>
+    <p>
+        Tuesdays 6:00pm - 9:00pm</br>
+         <a href="http://www.ccchl.ca/"  target="_blank"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
+        7644, rue Édouard, LaSalle, Canada, H8P 1T3</br>
+        Tel: 514.367.5000</br>
+        Fax: 514.367.4471</p>
     </div>
 
   </section>
