--- a/classes/yelm/index.html
+++ b/classes/yelm/index.html
@@ -1,1 +1,158 @@
-Marker
+<!DOCTYPE HTML>
+
+<html>
+
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../assets/css/css.css">
+    <link rel="stylesheet" href="../../assets/css/popup.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Alex Dong Taiji</title>
+  </head>
+
+<body>
+
+  <header class="header-classes">
+    <nav class="nav-homepage">
+      <ul class="nav-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
+        <li><a class="store-button" href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="header-background">
+    <h1>Yelm, Washington</h1>
+  </div>
+
+  <section class="history-classes">
+    <div class="history-container classes-container">
+      <a href="#yelm-popup" class="animated_popup"><h1>Instructor: Chris Upton</h1></a>
+        <div id="yelm-popup" class="image-popup" style="display:none">
+          <img src="../../assets/images/instructor/chrisupton.jpg">
+          <h3>Chris Upton</h3>
+          <p>Christepher Upton began learning Tai Chi in the Fall of 2010 in Lacey,
+          Washington under Senior Instructor Dave Graham.  Prior to Tai Chi, he
+          was out-of-shape and over-weight and spent many years without much
+          exercise and sat at a desk all day for his job.  Unhappy about his
+          health condition and mental state, he needed something to get active
+          again. That's when he decided to try out Tai Chi.  Christepher
+          discovered that this form of Tai Chi wasn't as easy as it looked, but
+          not too demanding on the body.  Chris continued expanding his
+          knowledge and understanding of Tai Chi and learned other forms than
+            the typical Slow Set.</p>
+          <p>He began officially teaching and assisting Tai Chi and Qi Gong in May
+          2015 and now teaches in Yelm, Washington.  Through study under Master
+          Alex Dong, Senior Instructor Andy Holmes, Bob Brees, and Terry
+          Johnson, and wonderful Dee Brees, Intensive workshops, training
+          courses, and continued practice, he has developed knowledge and skills
+          that he wants to share.  He teaches Dong(Tung) style Tai Chi and
+          developed the Qi Gong movement "Praying Mantis Bathes by the Pond".
+          As of Dec 2017, Chris has accumulated over 981 documented hours of Tai
+          Chi Teaching, learning, and practice.</p>
+          <p>
+
+          He is also an established Information Technology Specialist with over
+          19 years of experience in that field.  He founded his own small
+          business Energy Within TaiChi, LLC, April 2016 in Yelm, Washington,
+          and created the South Sound Tai Chi and Qi Gong Group in Facebook.
+          Christepher is also certified with Heart saver First Aid CPR AED.
+        </p>
+        </div>
+        <p>Class schedelue <a href="target="_blank" href="http://www.energywithintaichi.com/">Energy Within Tai Chi</a></p>
+
+https://www.facebook.com/search/top/?q=energy%20within%20tai%20chi
+
+Phone: 360-250-0322
+
+e-mail: cupton@energywithin.com
+</p>
+    </div>
+    
+  </section>
+
+  <footer>
+    <nav class="footer-homepage">
+      <ul class="footer-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a href="../../workshops/">Workshops</a></li>
+        <li><a href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="../../assets/js/jquery.popup.js"></script>
+  <script>
+    $(function(){
+      /*-------------------------------
+        GENERAL EXAMPLES
+      -------------------------------*/
+      // Default usage
+      $('.default_popup').popup();
+      // Animated popup
+      $('.animated_popup').popup({
+        show        : function($popup, $back){
+          var plugin = this,
+            center = plugin.getCenter();
+          $popup
+            .css({
+              top     : - $popup.children().outerHeight(),
+              left    : center.left,
+              opacity : 1
+            })
+            .animate({top : center.top}, 500, 'easeOutBack', function(){
+              // Call the open callback
+              plugin.o.afterOpen.call(plugin);
+            });
+        }
+      });
+      // Call ALL the callbacks
+      $('.callback_popup').popup({
+        beforeOpen          : function(type){
+          console.log('beforeOpen -', type);
+        },
+        afterOpen           : function(){
+          console.log('afterOpen');
+        },
+        beforeClose         : function(){
+          console.log('beforeClose');
+        },
+        afterClose          : function(){
+          console.log('afterClose');
+        }
+      });
+      // Error popup
+      $('.error_popup').popup({
+        error   : function(content, type){
+          // Just call open again, it'll replace the content
+          this.open('<h1>ERROR!</h1><p>Content "'+content+'" of type "'+type+'" could not be loaded.</p>', 'html');
+        }
+      });
+    });
+    /*---------------------
+      JQUERY EASING
+    */
+    $.extend($.easing, {
+      easeOutBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*((t=t/d-1)*t*((s+1)*t + s) + 1) + b;
+      },
+      easeInBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*(t/=d)*t*((s+1)*t - s) + b;
+      }
+    });
+  </script>
+
+</body>
+
+</html>
