--- a/classes/yelm/index.html
+++ b/classes/yelm/index.html
@@ -64,13 +64,10 @@
           Christepher is also certified with Heart saver First Aid CPR AED.
         </p>
         </div>
-        <p>Class schedelue <a href="target="_blank" href="http://www.energywithintaichi.com/">Energy Within Tai Chi</a></p>
-
-https://www.facebook.com/search/top/?q=energy%20within%20tai%20chi
-
-Phone: 360-250-0322
-
-e-mail: cupton@energywithin.com
+        <p>Class schedelue <a href="target="_blank" href="http://www.energywithintaichi.com/">Energy Within Tai Chi</a></br>
+          Phone: 360-250-0322</br>
+          E-mail: <a href="mailto:cupton@energywithin.com">cupton@energywithin.com</a>
+          </p>
 </p>
     </div>
     
