--- a/classes/index.html
+++ b/classes/index.html
@@ -53,6 +53,7 @@
         <li><a href="windham/">Windham, New Hampshire</a></li>
         <li><a href="olympia/">Olympia, Washington</a></li>
         <li><a href="princeton/">Princeton, New Jersey</a></li>
+        <li><a href="yelm/">Yelm, Washington</a></li>
       </ul>
       
       <h2>Canada</h2>
@@ -76,7 +77,6 @@
         <li><a href="southhampton">Southampton, England</a></li>
         <li><a href="grenoble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
-        <li><a href="crete">Crete, Greece</a></li>
         <li><a href="siena">Siena, Italy</a></li>
         <li><a href="majorca">Majorca, Spain</a></li>
       </ul>
