--- a/classes/yelm/index.html
+++ b/classes/yelm/index.html
@@ -64,7 +64,7 @@
           Christepher is also certified with Heart saver First Aid CPR AED.
         </p>
         </div>
-        <p>Class schedelue <a href="target="_blank" href="http://www.energywithintaichi.com/">Energy Within Tai Chi</a></br>
+        <p>Class schedelue <a target="_blank" href="http://www.energywithintaichi.com/">Energy Within Tai Chi</a></br>
           Phone: 360-250-0322</br>
           E-mail: <a href="mailto:cupton@energywithin.com">cupton@energywithin.com</a>
           </p>
