--- a/store/index.html
+++ b/store/index.html
@@ -33,8 +33,9 @@
 
   <section class="history-classes store-section books-section">
 
+    <!--
     <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong & The Fundamental Qigong #3</h3>
+      <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong &amp; The Fundamental Qigong #3</h3>
       <h4>$75.00</h4>
       <a href="#simplifiedqigong-popup" class="animated_popup"><img src="../assets/images/qigongset.jpg" height="250px"></a>
       <h5><a href="#simplifiedqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
@@ -94,6 +95,8 @@
       <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
       </form></h6>
     </div>
+
+-->
 
     <div class="store-book-container">
       <h3><span class="red-highlight">NEW!</span> Red Book (English) Revised</h3>
