--- a/store/index.html
+++ b/store/index.html
@@ -203,11 +203,13 @@
           <h3>Simplified Tai Chi</h3>
           <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
         </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <h6>Out of stock
+          <!-- <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="U2J8R6GJQLDXQ">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
+        </form>
+      --></h6>
       </div>
 
       <div class="store-book-container">
@@ -219,11 +221,13 @@
           <h3>The Fundamental Qigong #3</h3>
           <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
         </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <h6>
+          Out of stock
+          <!-- <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="K2W2H4T85LQ4L">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
+        </form> --> </h6>
       </div>
 
       <div class="store-book-container">
@@ -245,11 +249,14 @@
           
           <p>Extremely good the back. Relieve and heals back pain and shoulder stiffness. </p>
         </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <h6>Out of stock
+          <!--
+          <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="7BL58W4SJPNK4">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
+        </form>
+      --> </h6>
       </div>
 
       <div class="store-book-container">
@@ -271,11 +278,12 @@
           
           <p>Extremely good the back. Relieve and heals back pain and shoulder stiffness. </p>
         </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <h6><!--
+        <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="35GXGPDK27LLQ">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
+        </form> --> </h6>
       </div>
 
       <div class="store-book-container">
