--- a/store/index.html
+++ b/store/index.html
@@ -116,7 +116,7 @@
       </form></h6>
     </div>
 
--->
+     -->
 
     <div class="history-container store">
       <h1>Books</h1>
@@ -278,7 +278,7 @@
           
           <p>Extremely good the back. Relieve and heals back pain and shoulder stiffness. </p>
         </div>
-        <h6><!--
+        <h6> Out of stock <!--
         <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="35GXGPDK27LLQ">
