--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -69,8 +69,10 @@
 
     <div class="history-container classes-container instructor-container">
       <a href="#elsa-popup" class="animated_popup"><h1>Instructor:  Elsa Kasapoglou</h1></a>
+      <!--
       <div id="elsa-popup" class="image-popup" style="display:none">
-        <!-- <h3>Elsa Kasapoglou</h3> -->
+      </div>
+      -->
       <p>Energy Tai Chi Chuan
       <br>Address: 
       <br>Phone:  +30 6974 204 955  or Email: <a href="mailto:terrangirl.01@gmail.com">terrangirl.01@gmail.com</a>
