--- a/classes/southhampton/index.html
+++ b/classes/southhampton/index.html
@@ -33,7 +33,7 @@
   <section class="history-classes link-container">
     <div class="history-container classes-container">
       <h1>Instructor: Peter Dowding</h1></a>
-      <p>Contact: <a href="mailto:pete@peteandmaria.freeserve.co.uk">pete@peteandmaria.freeserve.co.uk</a></p>
+      <p>Contact: <a href="mailto:pjdowding902@gmail.com">pjdowding902@gmail.com</a></p>
     </div>
   </section>
 
