--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -66,19 +66,15 @@
       <br>Website: <a href="http://www.taichiathens.gr" target="_blank">www.taichiathens.gr</a></p>
     </div>
 
-
-    <div class="history-container classes-container instructor-container">
-      <a href="#elsa-popup" class="animated_popup"><h1>Instructor:  Elsa Kasapoglou</h1></a>
-      <div id="elsa-popup" class="image-popup" style="display:none">
-      </div>
-   
-      <p>Energy Tai Chi Chuan
-      <br>Address: 
-      <br>Phone:  +30 6974 204 955  or Email: <a href="mailto:terrangirl.01@gmail.com">terrangirl.01@gmail.com</a>
-     </p>
+    <div class="history-container classes-container">
+    <h1>Instructor: Elsa Kasapoglou</h1></a>
+    <p>Energy Tai Chi Chuan</br>
+    Address: Fokidos str. 9-11, Pireaus</br>
+     Phone: +30 6974 204 955 email: <a href="mailto:terrangirl.01@gmail.com">terrangirl.01@gmail.com</a></p>
     </div>
-
   </section>
+
+
 
   <footer>
     <nav class="footer-homepage">
