--- a/assets/logos/index.html
+++ b/assets/logos/index.html
@@ -8,11 +8,16 @@
 
 <dl>
   <dt>Alex Dong - Logos</dt>
+  <dd><a href="/assets/logos/image2.png">Current logo as a PNG</a></dd>
+  <!--
     <dd><a href="/assets/logos/Ying Jie_1.EPS">Ying Jie_1.EPS</a></dd>
     <dd><a href="/assets/logos/Ying Jie_1.PSD">Ying Jie_1.PSD</a></dd>
     <dd><a href="/assets/logos/Ying Jie_1.TIFF">Ying Jie_1.TIFF</a></dd>
     <dd><a href="/assets/logos/Ying Jie_1.pdf">Ying Jie_1.pdf</a></dd>
     <dd><a href="/assets/logos/Ying_Jie_seal.jpg">Ying_Jie_seal.jpg</a></dd>
+
+-->
+  
 </dl>
 
 </body>
