--- a/workshops/index.html
+++ b/workshops/index.html
@@ -78,7 +78,10 @@
             <h3>Upstate New York</h3>
             <p>July 6th to July 9th 2018</p>
 	  <p><b>Push Hands workshop</b></p>
-         <p>Details to follow</p>
+         <p>Further details and a booking form:  
+		<a target="_blank" href="../assets/docs/NYPH_July_2018.pdf">PDF</a> or
+		<a target="_blank" href="../assets/docs/NYPH_July_2018.pdf">Word document</a>
+		  </p>
          <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
                </div>
 
