--- a/workshops/index.html
+++ b/workshops/index.html
@@ -80,7 +80,7 @@
 	  <p><b>Push Hands workshop</b></p>
          <p>Further details and a booking form:  
 		<a target="_blank" href="../assets/docs/NYPH_July_2018.pdf">PDF</a> or
-		<a target="_blank" href="../assets/docs/NYPH_July_2018.pdf">Word document</a>
+		<a target="_blank" href="../assets/docs/NYPH_July_2018.docx">Word document</a>
 		  </p>
          <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
                </div>
