--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
   <head>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../assets/css/css.css">
+    <link rel="stylesheet" href="/assets/css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Alex Dong Taiji</title>
