--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
     <div class="history-container">
       <h1>Error page</h1>
       <p>You have reached this page in error.</p>
-      <p>Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></p>
+      <p>Please report to the <a href="mailto:webmaster@alexdongtaiji.com">Webmaster</a></p>
     </div>
   </section>
 
