--- a/workshops/index.html
+++ b/workshops/index.html
@@ -72,7 +72,7 @@
         </div>
 
 
-      <a href="#ph2018" class="animated_popup"><h1>Upstate NY - Push Hands</h1></a>
+      <a href="#ph2018" class="animated_popup"><h1>Upstate New York - Push Hands</h1></a>
         <h2>July 6th to July 9th 2018</h2>
           <div id="ph2018" style="display:none" class="image-popup" class="book-details-popup">
             <h3>Upstate New York</h3>
@@ -96,7 +96,7 @@
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
-	          <a href="#ny2018" class="animated_popup"><h1>Upstate NY - Forms</h1></a>
+	          <a href="#ny2018" class="animated_popup"><h1>Upstate New York - Forms</h1></a>
         <h2>October 26th to October 28th 2018</h2>
           <div id="ny2018" style="display:none" class="image-popup" class="book-details-popup">
             <h3>Upstate New York</h3>
