--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -43,15 +43,22 @@
       <p>131 W 72nd St. Room 4R<br/>
         10 am to 11 am - Simplified Slow Form and basic Qigong</p>
       <h2>Thursday Evenings</h2>
-      <p>440 Lafayette Room<br/>
-        6 pm to 7 pm - Qigong 3C<br/>
-        7 pm to 8:30 pm - Slow Form and Fast Form 4F</p>
+      <p>440 Lafayette<br/>
+        6 pm to 7 pm - Qigong Room 3C<br/>
+        7 pm to 8:30 pm - Slow Form and Fast Form Room 4F</p>
       <h2>Monthly Workshops</h2>
        <p>Sunday Workshop - 4 to 4 1/2 hours of Forms, weapons and Push Hands.<br/>
         Monthly Push Hands class - 2 to 2 1/2 hours<br/>
         Please inquire for details.</p>
       <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a>
         to schedule a workshop or private lessons.</p>
+      
+      <h2>Venue Information</h2>
+        <p> <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank">440 Studios<br/>
+        440 Lafayette Street, New York NY 10003.</a><br/>
+        Directly across from the public theater, between Astor Place and 4th Street. Subway 8th Street on the W, R trains, and Astor Place on the 6 trains.</p>
+
+
 
      </div>
   </section>
