--- a/workshops/index.html
+++ b/workshops/index.html
@@ -42,7 +42,13 @@
             		<div id="ww2018" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Westwater</h3>
        		 <p>April 27th to May 5th 2018</p>
-				<p>Details to follow</p>
+				
+			<p>Further details and a booking form:
+			<a target="_blank" href="../assets/docs/2018 Westwater.pdf">PDF</a> or
+			<a target="_blank" href="../assets/docs/2018 Westwater.docx">Word document</a>
+			</p>
+
+
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
