--- a/workshops/index.html
+++ b/workshops/index.html
@@ -36,6 +36,16 @@
 
 	<!-- elements follow -->
 	    
+	 <a href="#hi2018" class="animated_popup"><h1>Honolulu, Hawaii</h1></a>
+          <h2>February 18th and 19th 2018</h2>
+         <div id="hi2018" style="display:none" class="image-popup" class="book-details-popup">
+          <h3>Honolulu, Hawaii</h3>
+           <p>February 18th and 19th 2018</br>
+          For more info: Contact Johnson at <a href="bolibolj001@hawaii.rr.com">bolibolj001@hawaii.rr.com</a></p>
+              </div>
+
+
+
 	    
 	<a href="#ww2018" class="animated_popup"><h1>Westwater</h1></a>
        		<h2>April 27th to May 5th 2018</h2>
