--- a/workshops/index.html
+++ b/workshops/index.html
@@ -41,7 +41,7 @@
          <div id="hi2018" style="display:none" class="image-popup" class="book-details-popup">
           <h3>Honolulu, Hawaii</h3>
            <p>February 18th and 19th 2018</br>
-          For more info: Contact Johnson at <a href="bolibolj001@hawaii.rr.com">bolibolj001@hawaii.rr.com</a></p>
+          For more info: Contact Johnson at <a href="mailto:bolibolj001@hawaii.rr.com">bolibolj001@hawaii.rr.com</a></p>
               </div>
 
 
