--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -136,6 +136,55 @@
         Phone: 07753125696</p>
     </div>
 
+    <div class="history-container classes-container instructor-container">
+    <a href="#alanfinch-popup" class="animated_popup"><h1>Instructor: Alan Finch</h1></a>
+    <div id="alanfinch-popup" class="image-popup" style="display:none">
+                        <h3>Alan Finch</h3>
+
+                       I always had an interest in martial arts mainly after going to the
+                       cinema to see Bruce Lee films.</br>
+
+                       In 1989 I started to attend a Yang Style Tai Chi Chuan short form
+                       course run by the London Borough of Redbridge. To progress I then went
+                       to classes in London.</br>
+
+                       In the 1990s I started being taught with Master Alex Dong and
+                       immediately I was hooked by his style and way of teaching.</br>
+
+                       The years have passed but since then I have learnt many new forms, met
+                       many friends who, like myself, are very enthusiastic about Tai Chi.</br>
+
+                       Alex teaches new forms but also devotes a lot of his time on
+                       refinements of existing forms pointing out slight modifications and
+                       nuances in order to create a better, more flowing form. I find this is
+                       an enjoyable part of Tai Chi as it means the form evolves over time
+                       and the changes are logical when explained.</br>
+
+                       I have had my Instructors Certificate with the Tai Chi Union for Great
+                       Britain since 2002 and have assisted the weekly seniors group together
+                       with taking classes when instructors are on holiday. In May 2017 I
+                       took voluntary redundancy from my regular employment and now take
+                       classes in London and Essex having been accepted by Alex Dong as one
+                       of his instructors.</br>
+
+                       One of the classes I teach is provided by the Redbridge Carers Support
+                       Service for people who are carers for a disabled, frail or elderly
+                       relative or friend.  This assists in reducing their stress levels,
+                       providing a calming effect and inner peace and these students have
+                       said they have benefitted from improved mobility and strength.</br>
+
+                       The other class I teach is in Blackheath, London which is during the
+                       lunchtime period.</br>
+
+                       My other pasttimes are Iyengar Yoga which I have been practicing
+                       since I was 20 plus playing Table Tennis in various local leagues.</p>
+
+
+                  </div>
+                Friday at 12:30 to 1:30pm at the Quaker Meeting
+                        House, Lawn Terrace, Blackheath. SE3 9LL.
+                            </div>
+
 
   </section>
 
