--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -134,7 +134,7 @@
     <a href="#alanfinch-popup" class="animated_popup"><h1>Instructor: Alan Finch</h1></a>
     <div id="alanfinch-popup" class="image-popup" style="display:none">
                         <h3>Alan Finch</h3>
-
+                      <p>
                        I always had an interest in martial arts mainly after going to the
                        cinema to see Bruce Lee films.</br>
 
@@ -175,9 +175,10 @@
 
 
                   </div>
-                Friday at 12:30 to 1:30pm at the Quaker Meeting
-                        House, Lawn Terrace, Blackheath. SE3 9LL.
-                            </div>
+     <h2>Class schedule</h2><p>
+       Friday at 12:30 to 1:30pm at the Quaker Meeting
+       House, Lawn Terrace, Blackheath. SE3 9LL.</p>
+           </div>
 
 
   </section>
