--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -127,7 +127,7 @@
         <p>
         <h2>Contact</h2>
         <p>Email: <a href="mailto:jonbel@outlook.com">jonbel@outlook.com</a></br>
-        Phone: 07753125696</p>
+        Phone: 07753 125696</p>
     </div>
 
     <div class="history-container classes-container instructor-container">
@@ -178,6 +178,9 @@
      <h2>Class schedule</h2><p>
        Friday at 12:30 to 1:30pm at the Quaker Meeting
        House, Lawn Terrace, Blackheath. SE3 9LL.</p>
+  <h2>Contact</h2>
+        <p>Email: <a href="mailto:fin_chi@hotmail.co.uk">fin_chi@hotmail.co.uk</a></br>
+        Phone: 07467 0403476</p>
            </div>
 
 
