--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -180,7 +180,7 @@
        House, Lawn Terrace, Blackheath. SE3 9LL.</p>
   <h2>Contact</h2>
         <p>Email: <a href="mailto:fin_chi@hotmail.co.uk">fin_chi@hotmail.co.uk</a></br>
-        Phone: 07467 0403476</p>
+        Phone: 07467 040347</p>
            </div>
 
 
