--- a/workshops/index.html
+++ b/workshops/index.html
@@ -101,7 +101,9 @@
             		<div id="crete2018" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Crete, Greece</h3>
        		 <p>September 21st to September 26th 2018</p>
-				<p>Details to follow</p>
+				<p>Full details of the workshop and booking arrangements can be found 
+				<a target="_blank" href="http://www.taichi.gr/en/events/tai-chi-camp/">here</a>
+					</p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
