--- a/workshops/index.html
+++ b/workshops/index.html
@@ -102,7 +102,7 @@
        		 <h3>Crete, Greece</h3>
        		 <p>September 21st to September 26th 2018</p>
 				<p>Full details of the workshop and booking arrangements can be found 
-				<a target="_blank" href="http://www.taichi.gr/en/events/tai-chi-camp/">here</a>
+				<a target="_blank" href="http://www.taichi.gr/en/events/tai-chi-camp/">here.</a>
 					</p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
