add simplified taichi text, rename taichi fundamentals

--- a/store/index.html
+++ b/store/index.html
@@ -114,7 +114,7 @@
         <h4>$40.00</h4>
         <a href="#simplifiedtaichi-popup" class="animated_popup"><img src="../assets/images/simplifiedtaichidvd.jpg"></a>
         <h5><a href="#simplifiedtaichi-popup" class="animated_popup book-details-link">DVD Details</a></h5>
-        <div id="simpliefiedtaichi-popup" style="display:none">
+        <div id="simplifiedtaichi-popup" style="display:none">
           <h3>Simplified Tai Chi</h3>
           <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
         </div>
@@ -128,7 +128,7 @@
       </div>
 
       <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong #3</h3>
+        <h3><span class="red-highlight">NEW!</span> The Fundamental Qigongs 3</h3>
         <h4>$35.00</h4>
         <a href="#qigong-popup" class="animated_popup"><img src="../assets/images/taichifundamental.jpg"></a>
         <h5><a href="#qigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
@@ -146,7 +146,7 @@
       </div>
 
       <div class="store-book-container">
-        <h3>Taichi Fundamentals Qigong</h3>
+        <h3>Taichi Fundamental Qigongs 1 & 2</h3>
         <h4>$45.00</h4>
         <a href="#taichiqigong-popup" class="animated_popup"><img src="../assets/images/qigong.jpg"></a>
         <h5><a href="#taichiqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
@@ -174,7 +174,7 @@
       </div>
 
       <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong &amp; The Fundamental Qigong #3</h3>
+        <h3><span class="red-highlight">NEW!</span> Taichi Fundamental Qigongs 1 & 2,  The Fundamental Qigongs 3</h3>
         <h4>$75.00</h4>
         <a href="#simplifiedqigong-popup" class="animated_popup"><img src="../assets/images/qigongset.jpg" height="250px"></a>
         <h5><a href="#simplifiedqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
