--- a/workshops/index.html
+++ b/workshops/index.html
@@ -66,8 +66,18 @@
        <h2>June 8th to June 10th 2018</h2>
         <div id="uk2018" style="display:none" class="image-popup" class="book-details-popup">
      <h3>London, UK</h3>
-            <p>June 8th to June 10th 2018</p>
-        <p>Details to follow</p>
+           
+	<p>Friday June 8th Evening class: Qigong and basic Tai Chi &pound;25</br>
+      	Saturday June 9th Morning: Slow form &pound;35</br>
+      	Afternoon: How to use rooting, structure, energy in Slow form  &pound;35</br>
+      	Sunday June 10th Morning: Sticks and Sword  &pound;35</br>
+      	Afternoon: Push hands and applications  &pound;35</br>
+      	Cost is &pound;150 for all the classes.</br>
+      	Friday evening and Saturday  &pound;85, Saturday only £65.</br>
+      	There might be an extra class on Friday.</br>
+      	Exact times to be confirmed.</br>
+        Venue: Fanshawe Community Hall, Barnmead Road, Dagenham, RM9 5DX.</br>
+</p>
         <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
         </div>
 
