--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -31,10 +31,7 @@
   </div>
 
   <section class="history-classes">
-    
-    <!--
-    <div class="history-container classes-container">
-    -->
+   
       
     <div class="history-container classes-container instructor-container">
       <a href="#gordonjoly-popup" class="animated_popup"><h1>Instructor: Gordon Joly</h1></a>
@@ -52,6 +49,7 @@
       <a href="#arthurmartin-popup" class="animated_popup"><h1>Instructor: Arthur Martin</h1></a>
       <div id="arthurmartin-popup" class="image-popup" style="display:none">
         <h3>Arthur Martin</h3>
+          <img src="../../assets/images/instructor/arthur.jpg">
         <p>I started studying tai chi in 1991 with the student, of the student of
         my teacher's father: Dong Zhen Chen. I became a more serious student
         in 1998 after I joined Master Alex's father's trip to China: The skill
