--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -34,7 +34,7 @@
       <div class="history-container classes-container instructor-container">
      <a href="#rejean-popup" class="animated_popup"><h1>Instructor: R&eacute;jean Gardner</h1></a>
         <div id="rejean-popup" class="image-popup" style="display:none">
-          <img src="http://www.taichispirit.org.uk/images/rejean1.jpg">
+          <img src="../../assets/images/instructor/rejean1.jpg">
           <h3>R&eacute;jean Gardner</h3>
             <p>R&eacute;jean Gardner is a retired nurse and paramedic, and recipient of the
             General Governor of Canada Meritorious Service Medal and Emergency
@@ -74,7 +74,7 @@
     <div class="history-container classes-container instructor-container">
      <a href="#philipped-popup" class="animated_popup"><h1>Instructor: Philippe Daviet</h1></a>
         <div id="philipped-popup" class="image-popup" style="display:none">
-          <img src="http://www.taichispirit.org.uk/images/philippe.jpg">
+          <img src="../../assets/images/instructor/philippe.jpg">
           <h3>Philippe Daviet</h3>
           <p>Philippe has gravitated around various martial arts during a large
           part of his life. His interest in Taiji started in 2001 after having
