--- a/classes/prague/index.html
+++ b/classes/prague/index.html
@@ -36,7 +36,7 @@
       <a href="#sarka-popup" class="animated_popup"><h1>Instructor: Sarka Rajtorova</h1></a>
       <div id="sarka-popup" class="image-popup" style="display:none">
         <h3>&#352;&#225;rka Rajtorov&#225;</h3>
-        <img src="http://www.taichispirit.org.uk/images/sarka.jpg"></img>
+        <img src="../../assets/images/instructor/sarka.jpg"></img>
 
         <p>My first martial arts experience was with Taekwon-Do ITF organised by
         the Czech Taekwon-Do Association at the "Kerberos" school in Prague
