--- a/classes/vejle/index.html
+++ b/classes/vejle/index.html
@@ -35,8 +35,7 @@
     <a href="#klaus-popup" class="animated_popup"><h1>Instructor: Klaus Kotschenreuther</h1></a>
     <div id="klaus-popup" class="image-popup" style="display:none">
       <h3>Klaus Kotschenreuther</h3>
-      <img src="http://www.taichispirit.org.uk/images/klaus.jpg"></img>
-      <!--- Klaus Kotschenreuther -->
+      <img src="../../assets/images/instructor/klaus.jpg"></img>
       <p>
       Klaus Kotschenreuther, born in the city of Leipzig, East Germany in
       1942 and has been living permanently in Denmark since 1963. He has an
