--- a/classes/newbrunswick/index.html
+++ b/classes/newbrunswick/index.html
@@ -59,7 +59,7 @@
       <a href="#pierre-popup" class="animated_popup"><h1>Instructor: Pierre Beriault</h1></a>
       <div id="pierre-popup" class="image-popup" style="display:none">
         <h3>Pierre Beriault</h3>
-        <img src="http://www.taichispirit.org.uk/images/pierre.jpg">
+        <img src="../../assets/images/instructor/pierre.jpg">
         <p>I have been practising Yang style taiji since 1991, and the Dong family style, with Alex, since 1998. Whereas my former teacher was more interested in the flowing grace of the movements, Alex has made me discover the martial aspect of this art, something which I find brings true meaning to my practice.</p>
         <p>Taiji has brought me balance, peace and a sense of community with the many practitioners I have met so far, as well as long-lasting friendships. </p>
       </div>
