--- a/classes/southhampton/index.html
+++ b/classes/southhampton/index.html
@@ -30,12 +30,34 @@
     <h1>Southampton, England</h1>
   </div>
 
-  <section class="history-classes link-container">
-    <div class="history-container classes-container">
-      <h1>Instructor: Peter Dowding</h1></a>
+  <section class="history-classes">
+    <div class="history-container classes-container instructor-container">
+     <a href="#peterdowding-popup" class="animated_popup"><h1>Instructor: Peter Dowding</h1></a>
+      <div id="peterdowding-popup" class="image-popup" style="display:none">
+        <h3>Peter Dowding</h3>
+        <p>
+        I started learning Taiji quan in 1979 after having done Judo and
+        Karate as well as practising meditation for several years. Taiji
+        was fairly new in this country at that time and and I was
+        interested in it as an art that combined the martial aspect and
+        meditation. In 1990 I attended Dong Zeng Chen’s first workshop in
+        England and was immediately impressed by the clarity and
+        practical nature of his teaching. I took every opportunity to
+        study with him as much as I could on his subsequent visits to
+        England. I have continued to study with his son, Alex since he
+        took over the English classes.</br>
+
+        I have been teaching classes in Southampton since 1986. I
+        consider that I am still learning Taiji finding new insights and
+        inspiration in Alex’s workshops and my own practise. I think that
+        one of the joys of Taiji is that you continue develop for as long
+        as you practise.
+        </p>
+        </div>
       <p>Contact: <a href="mailto:pjdowding902@gmail.com">pjdowding902@gmail.com</a></p>
-    </div>
-  </section>
+          </div>
+   </section>
+
 
   <footer>
     <nav class="footer-homepage">
