--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -80,7 +80,7 @@
         <h3>Joyce Joly</h3>
       <p>Joyce Joly has been practicing tai chi for over 25 years, and has been teaching for 15 years.</p>
       <p>All of her learning has been with the Dong Family. Firstly with Dong Zeng Chen and now with Alex Dong. Joyce has attended many classes in the UK and abroad taking advantage of the teaching to improve her tai chi.</p>
-      <p>Joyce has a particular interest in teaching older people and intends to start teaching elderly people in residential homes, giving tai chi based exercises.</p>
+      <p>Joyce has a particular interest in teaching older people.</p>
       </div>
        <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
     </div>
