--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -55,7 +55,7 @@
 
     <div class="history-container classes-container instructor-container">
       <a href="#yiannis-popup" class="animated_popup"><h1>Instructor: Yiannis Zoumproulis</h1></a>
-      <div id="yainnis-popup" class="image-popup" style="display:none">
+      <div id="yiannis-popup" class="image-popup" style="display:none">
         <img src="../../assets/images/instructor/yianniszoumproulis.jpg">
         <h3>Yiannis Zoumproulis</h3>
         <p>Yiannis Zoumproulis was born in Athens and started training in Chinese martial arts in 1992. During his training he has practiced Wudang Taijiquan, Eagle Claw Kung Fu and Yang style Taijiquan. He started his training with Master Alex Dong in 2002. Since then, he has travelled to attend workshops and has taught his own classes in Athens since 2006. He is also active in organizing Alex's workshops in Greece as well as other workshops and events for the Nea Smyrni Taijiquan Association. He is dedicated to continuing his Taijiquan studies with Master Alex Dong and is the founder of the Athens Taijiquan Association.</p>
