--- a/workshops/index.html
+++ b/workshops/index.html
@@ -105,7 +105,15 @@
                </div>
 
 
-	    
+         <a href="#tumwater2018" class="animated_popup"><h1>Olympia, Washington</h1></a>
+           <h2>August 17th and 18th 2018</h2>
+           <div id="tumwater2018" style="display:none" class="image-popup" class="book-details-popup">
+              <h3>Olympia, Washington</h3>
+		<p>August 17th and 18th 2018</br>
+		Details to follow</br>
+		Contact:  Andy Holmes<a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
+	    </div>
+
 	    	<a href="#crete2018" class="animated_popup"><h1>Crete, Greece</h1></a>
        		<h2>September 21st to September 26th 2018</h2>
             		<div id="crete2018" style="display:none" class="image-popup" class="book-details-popup">
