--- a/workshops/index.html
+++ b/workshops/index.html
@@ -91,6 +91,30 @@
         </div>
 
 
+         <a href="#frankfurt2018" class="animated_popup"><h1>Frankfurt, Germany</h1></a>
+           <h2>June 21st to June 24th 2018</h2>
+           <div id="frankfurt2018" style="display:none" class="image-popup" class="book-details-popup">
+              <h3>Erzhausen, Frankfurt, Germany</h3>
+                <p>June 21st to June 24th 2018</br>
+                Two 90 minutes evening classes will focus on</br>
+                Fundamentals Qigong 1-2. Four 2 1/2 hours</br>
+                class on the weekend will focus on Qigong 3</br>
+                and Simplified Form.</br>
+                Fee: 200 Euros for all classes or 180 Euros for the weekend.</br>
+                Contact information.</br>
+                Wudang Dao Arts - Schule f&uuml;r Innere K&uuml;nste</br>
+                Inh.: Patrick Braun</br>
+                Wilhelm-Leuschner Str. 52</br>
+                64390 Erzhausen</br>
+                Germany</br>
+                Email: <a href="mailto:info@wudangdaoarts.de">info@wudangdaoarts.de</a></br>
+                Website: <a target="_blank" href="http://www.wudangdaoarts.de/">Wudang Dao Arts - Schule f&uuml;r Innere K&uu\
+ml;nste</a></p>
+
+               </div>
+
+
+
       <a href="#ph2018" class="animated_popup"><h1>Upstate New York - Push Hands</h1></a>
         <h2>July 6th to July 9th 2018</h2>
           <div id="ph2018" style="display:none" class="image-popup" class="book-details-popup">
