--- a/workshops/index.html
+++ b/workshops/index.html
@@ -108,8 +108,8 @@
                 64390 Erzhausen</br>
                 Germany</br>
                 Email: <a href="mailto:info@wudangdaoarts.de">info@wudangdaoarts.de</a></br>
-                Website: <a target="_blank" href="http://www.wudangdaoarts.de/">Wudang Dao Arts - Schule f&uuml;r Innere K&uu\
-ml;nste</a></p>
+                Website: <a target="_blank" href="http://www.wudangdaoarts.de/">Wudang Dao Arts - Schule f&uuml;r 
+		Innere K&uuml;nste</a></p>
 
                </div>
 
