--- a/workshops/index.html
+++ b/workshops/index.html
@@ -96,8 +96,8 @@
            <div id="frankfurt2018" style="display:none" class="image-popup" class="book-details-popup">
               <h3>Erzhausen, Frankfurt, Germany</h3>
                 <p>June 21st to June 24th 2018</br>
-                Two 90 minutes evening classes will focus on</br>
-                Fundamentals Qigong 1-2. Four 2 1/2 hours</br>
+                Two 90 minutes evening classes (Thursday and Friday) 
+		will focus on Fundamentals Qigong 1-2. Four 2 1/2 hours</br>
                 class on the weekend will focus on Qigong 3</br>
                 and Simplified Form.</br>
                 Fee: 200 Euros for all classes or 180 Euros for the weekend.</br>
