--- a/workshops/index.html
+++ b/workshops/index.html
@@ -134,8 +134,8 @@
            <div id="tumwater2018" style="display:none" class="image-popup" class="book-details-popup">
               <h3>Olympia, Washington</h3>
 		<p>August 17th and 18th 2018</br>
-		Details to follow</br>
-		Contact:  Andy Holmes<a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
+		Details to follow.</br>
+		Contact:  Andy Holmes <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
 	    </div>
 
 	    	<a href="#crete2018" class="animated_popup"><h1>Crete, Greece</h1></a>
