--- a/workshops/index.html
+++ b/workshops/index.html
@@ -36,17 +36,6 @@
 
 	<!-- elements follow -->
 	    
-	 <a href="#hi2018" class="animated_popup"><h1>Honolulu, Hawaii</h1></a>
-          <h2>February 18th and 19th 2018</h2>
-         <div id="hi2018" style="display:none" class="image-popup" class="book-details-popup">
-          <h3>Honolulu, Hawaii</h3>
-           <p>February 18th and 19th 2018</br>
-          For more info: Contact Johnson at <a href="mailto:bolibolj001@hawaii.rr.com">bolibolj001@hawaii.rr.com</a></p>
-              </div>
-
-
-
-	    
 	<a href="#ww2018" class="animated_popup"><h1>Westwater</h1></a>
        		<h2>April 27th to May 5th 2018</h2>
             		<div id="ww2018" style="display:none" class="image-popup" class="book-details-popup">
@@ -130,10 +119,10 @@
 
 
          <a href="#tumwater2018" class="animated_popup"><h1>Olympia, Washington</h1></a>
-           <h2>August 17th to 19th 2018</h2>
+           <h2>August 17th to August 19th 2018</h2>
            <div id="tumwater2018" style="display:none" class="image-popup" class="book-details-popup">
               <h3>Olympia, Washington</h3>
-		<p>August 17th to 19th</br>
+		<p>August 17th to August 19th</br>
 		Details to follow.</br>
 		Contact:  Andy Holmes <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
 	    </div>
