--- a/workshops/index.html
+++ b/workshops/index.html
@@ -80,11 +80,11 @@
         </div>
 
 
-         <a href="#frankfurt2018" class="animated_popup"><h1>Frankfurt, Germany</h1></a>
+         <a href="#frankfurt2018" class="animated_popup"><h1>Erzhausen, Germany</h1></a>
            <h2>June 21st to June 24th 2018</h2>
            <div id="frankfurt2018" style="display:none" class="image-popup" class="book-details-popup">
-              <h3>Erzhausen, Frankfurt, Germany</h3>
-                <p>June 21st to June 24th 2018</br>
+              <h3>Erzhausen, Germany</h3>
+		   <p>June 21st to June 24th 2018</br>
                 Two 90 minutes evening classes (Thursday and Friday) 
 		will focus on Fundamentals Qigong 1-2. Four 2 1/2 hours</br>
                 class on the weekend will focus on Qigong 3</br>
@@ -98,8 +98,8 @@
                 Germany</br>
                 Email: <a href="mailto:info@wudangdaoarts.de">info@wudangdaoarts.de</a></br>
                 Website: <a target="_blank" href="http://www.wudangdaoarts.de/">Wudang Dao Arts - Schule f&uuml;r 
-		Innere K&uuml;nste</a></p>
-
+		Innere K&uuml;nste</a>
+		</p>
                </div>
 
 
