--- a/workshops/index.html
+++ b/workshops/index.html
@@ -84,21 +84,14 @@
            <h2>June 21st to June 24th 2018</h2>
            <div id="frankfurt2018" style="display:none" class="image-popup" class="book-details-popup">
               <h3>Erzhausen, Germany</h3>
-		   <p>June 21st to June 24th 2018</br>
-                Two 90 minutes evening classes (Thursday and Friday) 
-		will focus on Fundamentals Qigong 1-2. Four 2 1/2 hours</br>
-                class on the weekend will focus on Qigong 3</br>
+		<p>June 21st to June 24th 2018</br>
+                Two 90 minutes evening classes will focus on Fundamentals Qigong 1-2.</br>
+		Four 2 1/2 hours class on the weekend will focus on Qigong 3</br>
                 and Simplified Form.</br>
-                Fee: 200 Euros for all classes or 180 Euros for the weekend.</br>
-                Contact information.</br>
-                Wudang Dao Arts - Schule f&uuml;r Innere K&uuml;nste</br>
-                Inh.: Patrick Braun</br>
-                Wilhelm-Leuschner Str. 52</br>
-                64390 Erzhausen</br>
-                Germany</br>
-                Email: <a href="mailto:info@wudangdaoarts.de">info@wudangdaoarts.de</a></br>
-                Website: <a target="_blank" href="http://www.wudangdaoarts.de/">Wudang Dao Arts - Schule f&uuml;r 
-		Innere K&uuml;nste</a>
+		Venue: Wilhelm-Leuschner Str. 52, 64390, Erzhausen, Germany.</br>
+                Full details at <a target="_blank" href="https://www.wudangdaoarts.de/aktuelles/">Wudang Dao Arts - Schule f&uuml;r 
+		Innere K&uuml;nste</a> 
+		Contact: <a href="mailto:info@wudangdaoarts.de">info@wudangdaoarts.de</a></br>
 		</p>
                </div>
 
