--- a/workshops/index.html
+++ b/workshops/index.html
@@ -90,7 +90,7 @@
                 and Simplified Form.</br>
 		Venue: Wilhelm-Leuschner Str. 52, 64390, Erzhausen, Germany.</br>
                 Full details at <a target="_blank" href="https://www.wudangdaoarts.de/aktuelles/">Wudang Dao Arts - Schule f&uuml;r 
-		Innere K&uuml;nste</a> 
+		Innere K&uuml;nste</a> </br>
 		Contact: <a href="mailto:info@wudangdaoarts.de">info@wudangdaoarts.de</a></br>
 		</p>
                </div>
